--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "global": "^4.4.0",
+    "html-pdf": "^3.0.1",
+    "html-pdf-node": "^1.0.8",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
