--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose-morgan": "^1.0.17",
     "mssql": "^10.0.1",
     "mysql2": "^3.6.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.5",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
