--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "html-pdf": "^3.0.1",
     "html-pdf-node": "^1.0.8",
     "jsonwebtoken": "^9.0.2",
+    "mathjs": "^11.11.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "mongoose-morgan": "^1.0.17",
