--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "currency.js": "^2.0.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "global": "^4.4.0",
     "html-pdf": "^3.0.1",
