--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "currency.js": "^2.0.4",
     "dotenv": "^16.3.1",
@@ -28,6 +29,7 @@
     "mongoose-morgan": "^1.0.17",
     "mssql": "^10.0.1",
     "mysql2": "^3.6.1",
+    "node-cron": "^3.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.5",
     "numeral": "^2.0.6",
