--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "axios-oauth-client": "^2.0.4",
+    "axios-token-interceptor": "^0.2.0",
     "bcrypt": "^5.1.1",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
