Se agrega el api del banco

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ DB_PORT=5432
 DB_PASSWORD=admin
 G_PASSWORD=cqshjugbxmmcejtk
 SECRET=parqlBucares*2040-
-CLIENT_ID=25060008
-CLIENT_SECRET=dv05EbiJ
+CLIENT_ID='25060008'
+CLIENT_SECRET='dv05EbiJ'
