--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.5",
     "numeral": "^2.0.6",
+    "oauth-v2-client": "^1.2.2",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "qs": "^6.11.2",
